# fanterlastic_four

./: .boring  Makefile.am  README  SConstruct  TODO  configure.ac
config/: fanterlasticfour.config
configs/: fanterlasticfour.sh
doc/: overview.edoc
ebin/: .sconsign  fanterlasticfour.app
script/: Makefile.am  fanterlasticfour.conf.in  fanterlasticfour.in
scripts/: Makefile.am  fanterlasticfour.sh
src/: Makefile.am  chargen.erl  daytime.erl  echo.erl  fanterlasticfour.app  fanterlasticfour.config  fanterlasticfour.rel  fanterlasticfour_app.erl  fanterlasticfour_sup.erl  time.erl
